Fixed issue with image styling and colour contrast in Footer

--- a/dto_whitesite/sass/_footer.scss
+++ b/dto_whitesite/sass/_footer.scss
@@ -11,7 +11,7 @@
 		overflow:hidden;
 		h2 {
 			text-transform:uppercase;
-			color:#888;
+			color:#666666;
 			font-size:1em;
 			margin-top:15px;
 			margin-bottom:0;
@@ -92,7 +92,7 @@
 						li {
 							
 							a {
-								color:#888;
+								color:#666666;
 								font-size:0.85em;
 							}
 						}
